various fix