@@ -48,7 +48,7 @@ public class CommandRunner {
     public String executeCommandWithParameter(List<String> listOfString){
         String msg = "";
         try {
-            String className = "game.command.with_parameter.implementation." + listOfString.get(0).substring(0, 1).toUpperCase() + listOfString.get(0).substring(1);
+            String className = "game.command.with_parameter.implementation." + listOfString.getFirst().substring(0, 1).toUpperCase() + listOfString.getFirst().substring(1);
 
             Class<?> commandClass = Class.forName(className);
 
